--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,54 +17,46 @@ body {
   flex-direction: row;
   justify-content: center;
   text-align: center;
+  .block {
+    width: 300px;
+    height: 450px;
+  }
 
-  // Вынести общие стили для всех блоков отдельно
-  // а именно width и height
-  // на класс .block
-  // DRY - don't repeat yourself
-  //
   // Заменить все width на проценты
   //
   .block-one {
-    width: 300px;
-    height: 450px;
     background: #4549a3;
   }
   .block-two {
-    width: 300px;
-    height: 450px;
     background: #383c8e;
   }
   .block-three {
-    width: 300px;
-    height: 450px;
     background: #2f316f;
   }
   .block-four {
-    width: 300px;
-    height: 450px;
     background: #2b2d50;
   }
 }
 .general-one .container {
   height: 200px;
   background: #ffffff;
-  margin-top: 20px;
+
   display: flex;
   flex-direction: row;
   justify-content: center;
+  .form {
+    width: 162px;
+    height: 158px;
+    margin: 22px 12px 0 13px;
+  }
 
   // DRY - don't repeat yourself
 
   .square-one {
-    width: 162px;
-    height: 158px;
     background: #df4a4a;
     border-radius: 10px;
   }
   .circle {
-    width: 162px;
-    height: 158px;
     background: #df4a4a;
     border: 8px solid #000000;
     // Круг дель так
@@ -72,8 +64,6 @@ body {
     border-radius: 250px;
   }
   .square-two {
-    width: 162px;
-    height: 158px;
     background: #df4a4a;
     border-radius: 15px 15px 0px 0px;
   }
@@ -81,27 +71,28 @@ body {
 .two-square {
   display: flex;
   justify-content: center;
-  .left-square {
+  .square {
     width: 600px; // проценты
     height: 430px;
+  }
+  .left-square {
     background: #35a84e;
     .center {
       position: absolute;
       width: 297px;
-      left: 370px;
-      top: 796px;
+      left: 362px;
+      top: 797px;
       height: 138px;
       background: #ffffff;
       border: 4px solid #5a2626;
       box-sizing: border-box;
       border-radius: 10px;
       text-align: center;
+
       padding: 40px;
     }
   }
   .rigth-square {
-    width: 599px; // проценты
-    height: 431px;
     background: #429d56;
   }
 }
