--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,97 +11,12 @@ body {
   }
 }
 
-.general-ziro .block-ziro {
-  display: flex;
+.section-one {
+  width: 1200px;
   height: 450px;
-  flex-direction: row;
-  justify-content: center;
-  text-align: center;
-
-  // Вынести общие стили для всех блоков отдельно
-  // а именно width и height
-  // на класс .block
-  // DRY - don't repeat yourself
-  //
-  // Заменить все width на проценты
-  //
-  .block-one {
+  .block-ziro {
     width: 300px;
     height: 450px;
-    background: #4549a3;
-  }
-  .block-two {
-    width: 300px;
-    height: 450px;
-    background: #383c8e;
-  }
-  .block-three {
-    width: 300px;
-    height: 450px;
-    background: #2f316f;
-  }
-  .block-four {
-    width: 300px;
-    height: 450px;
-    background: #2b2d50;
-  }
-}
-.general-one .container {
-  height: 200px;
-  background: #ffffff;
-  margin-top: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-  // DRY - don't repeat yourself
-
-  .square-one {
-    width: 162px;
-    height: 158px;
-    background: #df4a4a;
-    border-radius: 10px;
-  }
-  .circle {
-    width: 162px;
-    height: 158px;
-    background: #df4a4a;
-    border: 8px solid #000000;
-    // Круг дель так
-    // border-radius: 50%;
-    border-radius: 250px;
-  }
-  .square-two {
-    width: 162px;
-    height: 158px;
-    background: #df4a4a;
-    border-radius: 15px 15px 0px 0px;
-  }
-}
-.two-square {
-  display: flex;
-  justify-content: center;
-  .left-square {
-    width: 600px; // проценты
-    height: 430px;
-    background: #35a84e;
-    .center {
-      position: absolute;
-      width: 297px;
-      left: 370px;
-      top: 796px;
-      height: 138px;
-      background: #ffffff;
-      border: 4px solid #5a2626;
-      box-sizing: border-box;
-      border-radius: 10px;
-      text-align: center;
-      padding: 40px;
-    }
-  }
-  .rigth-square {
-    width: 599px; // проценты
-    height: 431px;
-    background: #429d56;
+    background: url("../images/jellyfish.jpg");
   }
 }
