--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,15 +10,20 @@ body {
     box-sizing: border-box;
   }
 }
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 .general-ziro .block-ziro {
+  width: 100%;
   display: flex;
-  height: 450px;
   flex-direction: row;
   justify-content: center;
   text-align: center;
   .block {
-    width: 300px;
+    width: 25%;
     height: 450px;
   }
 
@@ -37,20 +42,17 @@ body {
     background: #2b2d50;
   }
 }
-.general-one .container {
-  height: 200px;
-  background: #ffffff;
-
+.general-one {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background: #ffffff;
+
   .form {
     width: 162px;
     height: 158px;
-    margin: 22px 12px 0 13px;
+    margin: 22px 10px 12px 10px;
   }
-
-  // DRY - don't repeat yourself
 
   .square-one {
     background: #df4a4a;
@@ -59,29 +61,36 @@ body {
   .circle {
     background: #df4a4a;
     border: 8px solid #000000;
-    // Круг дель так
-    // border-radius: 50%;
-    border-radius: 250px;
+    border-radius: 50%;
+    box-sizing: content-box;
+    margin-top: 15px;
   }
   .square-two {
     background: #df4a4a;
     border-radius: 15px 15px 0px 0px;
   }
 }
+.container-one {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .two-square {
   display: flex;
   justify-content: center;
+  width: 100%;
   .square {
-    width: 600px; // проценты
+    width: 50%; 
     height: 430px;
   }
   .left-square {
     background: #35a84e;
     .center {
-      position: absolute;
+      position: relative;
+      top: 150px;
+      left: 285px;
       width: 297px;
-      left: 362px;
-      top: 797px;
       height: 138px;
       background: #ffffff;
       border: 4px solid #5a2626;
