--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,11 @@ body {
     box-sizing: border-box;
   }
 }
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 .section-one .block {
   height: 450px;
@@ -28,10 +33,15 @@ body {
     background: url("../images/foliage.jpg");
   }
   .block-two {
-    display: inline-block;
+    //display: inline-block;
     position: absolute;
-    right: 4px;
-    bottom: 138px;
+    //right: 4px;
+    right: 0;
+    ///////
+    //bottom: 138px;
+    top: 50%;
+    margin-top: -72.5px;
+    ///////////
     width: 650px;
     height: 145px;
     background: #ff0000;
@@ -94,10 +104,12 @@ body {
   }
 }
 .section-three {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 860px;
+  //flex-direction: row;
+  //justify-content: center;
+  //height: 860px;
+  .nature {
+    display: flex;
+  }
   .jop {
     width: 50%;
     height: 430px;
@@ -109,15 +121,22 @@ body {
     background-position: center;
     background-size: auto auto;
     background-position: bottom 0 right 0;
+    position: relative;
     .forestry {
       position: absolute;
-      width: 597px;
-      height: 80px;
-      background: rgba(3, 0, 0, 0.64);
-      border-radius: 2px;
-      left: 78px;
-      top: 1003px;
+      //width: 597px;
+      width: 100%;
+      //////////
 
+      height: 80px;
+
+      background: rgba(3, 0, 0, 0.64);
+      //border-radius: 2px;
+      //left: 78px;
+      //top: 1003px;
+      bottom: 0;
+      left: 0;
+      /////////////
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
@@ -132,12 +151,18 @@ body {
     background-repeat: no-repeat;
     background-position: bottom 0 left 0;
     background-size: auto auto;
+    position: relative;
     .desert {
       position: absolute;
-      width: 599px;
-      height: 77px;
-      top: 1004px;
-      right: 76px;
+      //width: 599px;
+      width: 100%;
+      //////
+      height: 80px;
+      //top: 1004px;
+      //right: 76px;
+      right: 0;
+      bottom: 0;
+
       background: rgba(3, 0, 0, 0.64);
       font-family: Roboto;
       font-style: normal;
