--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,7 +14,9 @@ body {
   }
 }
 
-li, a, button {
+li,
+a,
+button {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -32,7 +34,11 @@ header {
 .logo {
   cursor: pointer;
 }
-
+.nav-wrp {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
 .nav__links {
   list-style: none;
 }
@@ -57,4 +63,12 @@ button {
   border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
+}
+
+.boot {
+  background-color: #eee;
+  .test {
+    height: 100px;
+    background-color: #488bff;
+  }
 }
