--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .section-one .block {
-  height: 450px;
+  // height: 450px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -55,6 +55,24 @@ body {
     padding-top: 13px;
   }
 }
+
+@media (max-width: 768px) {
+  .section-one {
+    .block {
+      display: flex;
+      flex-direction: column;
+      .block-two {
+        width: 50%;
+        font-size: 45px;
+      }
+      .one {
+        width: 100%;
+        background-repeat: no-repeat;
+      }
+    }
+  }
+}
+
 .section-two .planets {
   display: flex;
   flex-direction: row;
@@ -103,10 +121,19 @@ body {
     }
   }
 }
+
+@media (max-width: 768px) {
+  .section-two {
+    .planets {
+      display: flex;
+      // .planet {
+      //   width: 100%;
+      // }
+    }
+  }
+}
+
 .section-three {
-  //flex-direction: row;
-  //justify-content: center;
-  //height: 860px;
   .nature {
     display: flex;
   }
