--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,7 +10,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252a;
+    background-color: gray;
   }
 }
 
@@ -72,3 +72,30 @@ button {
     background-color: #488bff;
   }
 }
+
+.boot-one {
+  background-color: #eee;
+  .jop {
+    padding: 0;
+  }
+  .test-one {
+    padding-top: 100%;
+    // height: 100px;
+    background-color: #488bff;
+    margin-top: 15px;
+
+  }
+}
+
+.cap {
+  background-color: #eee;
+  .test-one {
+    // padding-top: 100%;
+    
+    height: 200px;
+    background-color: #488bff;
+    // margin-top: 15px;
+
+  }
+}
+
