--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,107 +1,105 @@
-//Это scss файл стилей
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 html,
 body {
   padding: 0;
   margin: 0;
-}
-body {
-  * {
-    box-sizing: border-box;
+  height: 100%;
+  background-color: #333;
+  color: #fff;
+  font-family: "Roboto";
+  a {
+    color: #eee;
   }
 }
+h2 {
+  margin-top: 50px;
+}
+
 .container {
-  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  width: 100%;
+  height: 100;
 }
 
-.general-ziro .block-ziro {
+.main-navigation-wrp {
+  height: 100vh;
   width: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  text-align: center;
-  .block {
-    width: 25%;
-    height: 450px;
-  }
-
-  // Заменить все width на проценты
-  //
-  .block-one {
-    background: #4549a3;
-  }
-  .block-two {
-    background: #383c8e;
-  }
-  .block-three {
-    background: #2f316f;
-  }
-  .block-four {
-    background: #2b2d50;
+  align-items: center;
+  flex-direction: column;
+  .logo {
+    max-width: 200px;
+    animation: jump 3.4s ease infinite;
   }
 }
-.general-one {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background: #ffffff;
 
-  .form {
-    width: 162px;
-    height: 158px;
-    margin: 22px 10px 12px 10px;
-  }
-
-  .square-one {
-    background: #df4a4a;
-    border-radius: 10px;
-  }
-  .circle {
-    background: #df4a4a;
-    border: 8px solid #000000;
-    border-radius: 50%;
-    box-sizing: content-box;
-    margin-top: 15px;
-  }
-  .square-two {
-    background: #df4a4a;
-    border-radius: 15px 15px 0px 0px;
-  }
-}
-.container-one {
+.main-navigation {
+  max-width: 450px;
   width: 100%;
-  max-width: 1200px;
   margin: 0 auto;
-}
-
-.two-square {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  .square {
-    width: 50%; 
-    height: 430px;
+  padding: 0;
+  margin-top: 30px;
+  li {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    background-color: #40495b;
   }
-  .left-square {
-    background: #35a84e;
-    .center {
-      position: relative;
-      top: 150px;
-      left: 285px;
-      width: 297px;
-      height: 138px;
-      background: #ffffff;
-      border: 4px solid #5a2626;
-      box-sizing: border-box;
-      border-radius: 10px;
-      text-align: center;
-
-      padding: 40px;
+  a {
+    padding: block;
+    width: 100%;
+    padding: 10px 15px;
+    text-decoration: none;
+    position: relative;
+    z-index: 0;
+    &:before {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 0;
+      z-index: -1;
+      height: 100%;
+      transition: all 0.5s ease;
+      content: "";
+      background-color: #23569c;
+    }
+    &:hover {
+      &:before {
+        width: 100%;
+      }
     }
   }
-  .rigth-square {
-    background: #429d56;
+}
+
+@keyframes jump {
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(1.3);
+  }
+  55% {
+    transform: scale(1.1);
+  }
+  85% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.task-description {
+  border: 2px solid #23569c;
+  padding: 40px;
+}
+.task-item {
+  background-color: rgba(0, 0, 0, 0.3);
+  img {
+    max-width: 100%;
   }
 }
