--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,11 +11,17 @@ body {
   a {
     color: #eee;
   }
+  img {
+    max-width: 100%;
+  }
 }
 h2 {
   margin-top: 50px;
 }
 
+h5 {
+  margin-top: 20px;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -56,6 +62,7 @@ h2 {
     text-decoration: none;
     position: relative;
     z-index: 0;
+    transition: all 0.3s ease;
     &:before {
       position: absolute;
       left: 0;
@@ -68,6 +75,8 @@ h2 {
       background-color: #23569c;
     }
     &:hover {
+      color: #2de62c;
+
       &:before {
         width: 100%;
       }
@@ -99,7 +108,5 @@ h2 {
 }
 .task-item {
   background-color: rgba(0, 0, 0, 0.3);
-  img {
-    max-width: 100%;
-  }
+
 }
