--- a/app/styles/test2.scss
+++ b/app/styles/test2.scss
@@ -4,19 +4,24 @@
   height: 100px;
 }
 
-
 // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 // Писть только снизу
-
 
 .task-1 {
   .primary-button {
   }
 }
 
-
 .task-2 {
   .secondary-button {
+  }
+}
+
+
+
+// для этой задачи нужно использовать transform: rotate
+.task-3 {
+  .round-button {
 
   }
 }
