new commit jedi

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,107 +1,10 @@
 //Это scss файл стилей
-
-html,
 body {
-  padding: 0;
-  margin: 0;
-}
-body {
-  * {
-    box-sizing: border-box;
-  }
-}
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.general-ziro .block-ziro {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  text-align: center;
-  .block {
-    width: 25%;
-    height: 450px;
-  }
-
-  // Заменить все width на проценты
-  //
-  .block-one {
-    background: #4549a3;
-  }
-  .block-two {
-    background: #383c8e;
-  }
-  .block-three {
-    background: #2f316f;
-  }
-  .block-four {
-    background: #2b2d50;
-  }
-}
-.general-one {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background: #ffffff;
-
-  .form {
-    width: 162px;
-    height: 158px;
-    margin: 22px 10px 12px 10px;
-  }
-
-  .square-one {
-    background: #df4a4a;
-    border-radius: 10px;
-  }
-  .circle {
-    background: #df4a4a;
-    border: 8px solid #000000;
-    border-radius: 50%;
-    box-sizing: content-box;
-    margin-top: 15px;
-  }
-  .square-two {
-    background: #df4a4a;
-    border-radius: 15px 15px 0px 0px;
-  }
-}
-.container-one {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.two-square {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  .square {
-    width: 50%; 
-    height: 430px;
-  }
-  .left-square {
-    background: #35a84e;
-    .center {
-      position: relative;
-      top: 150px;
-      left: 285px;
-      width: 297px;
-      height: 138px;
-      background: #ffffff;
-      border: 4px solid #5a2626;
-      box-sizing: border-box;
-      border-radius: 10px;
-      text-align: center;
-
-      padding: 40px;
+  position: relative;
+  
+  &ishome {
+    .site-header {
+      min-height: 700px;
     }
   }
-  .rigth-square {
-    background: #429d56;
-  }
-}
+}  
