--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,18 @@
-//Это scss файл стилей
+@import "./_fonts.scss";
+
 body {
   position: relative;
-  
-  &ishome {
+  padding: 0;
+  margin: 0;
+  font-family: "RalewayRegular", serif;
+  opacity: 1;
+
+  &.is-home {
+    opacity: 1;
+    color: #fff;
+
     .site-header {
       min-height: 700px;
     }
   }
-}  
+}
