--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,5 +1,4 @@
-@import "mixins/_font-face"; // импорт миксина
-
+@import "./mixins/_font-face.scss"; // импорт миксина
 
 // @include  - команда использования миксина
 // font-face - название миксина
