this problem two

--- a/app/styles/_libs.scss
+++ b/app/styles/_libs.scss
@@ -1,2 +1,2 @@
 // библиотеки, подключаемые плагины
-@import "../libs/bootsstrap-grid/bootstrap-grid";
+@import "../libs/bootsstrap-grid/bootstrap-grid.css";
