--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -3,4 +3,4 @@
 // @include  - команда использования миксина
 // font-face - название миксина
 // в скобках (название шрифта, путь к шрифту)
-@include font-face("RalewayRegular", "../fonts/RalewayRegular/RalewayRegular");
+@include font-face("raleway-ex", "../fonts/RalewayRegular/RalewayRegular");
