--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,3 +1,3 @@
 // переменные
-$default-font: "roboto-example", sans-serif;
+$default-font: "raleway-ex", sans-serif;//тут не работает
 $accent: orange;
