--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,3 +1,4 @@
 // переменные
-$default-font: "raleway-ex", sans-serif;//тут не работает
+$default-font: "raleway-ex", sans-serif;
+$head-font: "FiraSansRegular", sans-serif;//тут не работает
 $accent: orange;
