--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,9 +7,12 @@ body {
   padding: 0;
   margin: 0;
   // font-family: "raleway-ex", serif; //а тут всё круто
+   font-family: $default-font; //и так тоже
   opacity: 1;
-  
 
+  h1 {
+    font-family: $head-font; //и тут всё круто
+  }
 
   &.is-home {
     opacity: 1;
