--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,4 +1,6 @@
 // переменные
-$default-font: "raleway-ex", sans-serif;
-$head-font: "FiraSansRegular", sans-serif;//тут не работает
-$accent: orange;
+$default-font: "raleway", sans-serif;
+// $head-font: "FiraSansRegular", sans-serif;//тут не работает
+$accent: #f9c869;
+$blue: #66c7cd;
+$red: #f86868;
