--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -3,7 +3,14 @@
 // @include  - команда использования миксина
 // font-face - название миксина
 // в скобках (название шрифта, путь к шрифту)
-@include font-face("raleway-ex", "../fonts/RalewayRegular/RalewayRegular");
+@include font-face("raleway", "../fonts/RalewayRegular/RalewayRegular");
+@include font-face("raleway", bold "../fonts/RalewayBold/RalewayBold");
+@include font-face("raleway", 800 "../fonts/RalewayExtraBold/RalewayExtraBold");
+@include font-face("raleway", 300 "../fonts/RalewayLight/RalewayLight");
+@include font-face("raleway", 600 "../fonts/RalewaySemiBold/RalewaySemiBold");
+@include font-face("raleway", 100 "../fonts/RalewayThin/RalewayThin");
+@include font-face("firasans-ex", "../fonts/FiraSansRaleway/FiraSansRaleway");
 
-//добавил
-@include font-face("FiraSansRegular", "../fonts/FiraSansRegular/FiraSansRegular");
+
+
+
