--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,18 +3,21 @@
 @import "./_libs.scss";
 @import "./_vars.scss";
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
-  font-size: 16px;//относиться ко всем шрифтам
+  font-size: 16px; //относиться ко всем шрифтам
   min-width: 320px;
   position: relative;
   line-height: 1.75;
   font-family: $default-font;
   overflow: hidden;
-  opacity: 1;
-
+  &.is-home {
+    opacity: 1;
+    background-color: red !important;
+  }
 }
 @import "./_media"; //всегда в конце!
