--- a/app/styles/_libs.scss
+++ b/app/styles/_libs.scss
@@ -1,2 +1,5 @@
 // библиотеки, подключаемые плагины
 @import "../libs/bootstrap-grid/bootstrap-grid.css";
+@import "../libs/fontawesome/font-awesome.min.css";
+@import "../libs/mmenu/css/jquery.mmenu.all.css";
+@import "../libs/css-hamburgers/hamburgers.css";
