--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -126,7 +126,7 @@ html.mm-opened {
       }
       &::before {
         content: "\f219";
-        font-family: fontawesome;
+        font-family: FontAwesome;
       }
     }
     .active {
