--- a/app/styles/mixins/_font-face.scss
+++ b/app/styles/mixins/_font-face.scss
@@ -1,4 +1,4 @@
-@mixin font-face($font-family, $url) {
+@mixin font-face($font-family, $url, $font-weight: normal) {
   @font-face {
     font-family: '#{$font-family}';
     src: url('#{$url}.eot');
@@ -6,7 +6,7 @@
     url('#{$url}.woff') format('woff'),
     url('#{$url}.ttf') format('truetype'),
     url('#{$url}.svg') format('svg');
-    font-weight: normal;
+    font-weight: $font-weight;
     font-style: normal;
   }
 }
