--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,6 +52,62 @@ body {
     }
   }
 }
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  line-height: 1.4;
+  text-transform: uppercase;
+}
+.button {
+  display: inline-block;
+  border: none;
+  color: #fff;
+  text-decoration: none;
+  background-color: $accent;
+  padding: 16px 45px;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 3px;
+  border-radius: 2px;
+  text-align: center;
+  position: relative;
+  outline: none;
+  transition: background-color 0.1s ease;
+  &::after {
+    transition: background-color 0.2s ease;
+    position: absolute;
+    content: "";
+    height: 4px;
+    bottom: 0;
+    width: 100%;
+    background-color: darken($accent, 50%);
+    opacity: 0.18;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    left: 0;
+  }
+  &:focus,
+  &:hover {
+    text-decoration: none;
+    color: #fff;
+  }
+  &:hover {
+    background-color: lighten($accent, 5%);
+    &::after {
+      opacity: 0.22;
+    }
+  }
+  &:active {
+    background-color: darken($accent, 5%);
+    &::after {
+      opacity: 0.32;
+    }
+  }
+}
 section,
 header {
   position: relative;
@@ -123,10 +179,18 @@ html.mm-opened {
       top: 8px;
       &:hover {
         color: $accent;
+        &::before {
+          color: $accent;
+        }
       }
       &::before {
         content: "\f219";
         font-family: FontAwesome;
+        margin-right: 8px;
+        text-decoration: none;
+        font-size: 12px;
+        color: #fff;
+        transition: color 0.25s ease;
       }
     }
     .active {
@@ -135,6 +199,111 @@ html.mm-opened {
       }
     }
   }
+}
+.header-flex {
+  display: flex;
+  height: 100%;
+  position: relative;
+  top: 0;
+}
+.flex-center {
+  margin: auto;
+}
+.header-composition {
+  text-align: center;
+  position: relative;
+  p {
+    margin-top: 40px;
+  }
+  .button {
+    margin-top: 25px;
+  }
+}
+.welcome {
+  p {
+    font-size: 14px;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    margin: 0;
+    margin-bottom: -10px;
+    &::before,
+    &::after {
+      content: "";
+      height: 1px;
+      width: 100%;
+      position: relative;
+      background-color: #fff;
+      display: inline-block;
+    }
+    span {
+      margin: 0 10px;
+    }
+  }
+  .h1 {
+    font-weight: 100;
+    font-size: 70px;
+    margin: 0;
+    line-height: 1.6;
+    border-bottom: 1px solid #fff;
+    white-space: nowrap;
+  }
+  strong {
+    display: block;
+    text-transform: uppercase;
+    font-size: 17px;
+    margin-top: 25px;
+    .fa {
+      margin-right: 10px;
+      font-size: 12px;
+      color: #555;
+      &:last-child {
+        margin-left: 10px;
+        margin-right: inherit;
+      }
+    }
+  }
+}
+.header-social {
+  position: absolute;
+  display: flex;
+  right: 0;
+  height: 100%;
+  border-left: rgba(#fff, 0.1) 1px solid;
+  top: 0;
+  padding: 0 12.5px;
+}
+.soc {
+  margin: auto;
+  ul,
+  li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+  a {
+    color: #2c2c2c;
+    font-size: 17px;
+    display: block;
+    background-color: rgba(#fff, 0.2);
+    height: 38px;
+    width: 38px;
+    text-align: center;
+    margin: 18px 0;
+    line-height: 38px;
+    border-radius: 10em;
+    transition: background-color 0.25s ease;
+    &:hover {
+      background-color: rgba(#fff, 0.4);
+    }
+  }
+}
+
+.header-contacts {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 @import "./_media"; //всегда в конце!
