--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,7 +14,7 @@ body {
   position: relative;
   line-height: 1.75;
   font-family: $default-font;
-  overflow: hidden;
+  // overflow: hidden;
   &.is-home {
     opacity: 1;
   }
@@ -105,6 +105,23 @@ body {
     background-color: darken($accent, 5%);
     &::after {
       opacity: 0.32;
+    }
+  }
+  &.button-white {
+    background-color: #fff;
+    color: #444444;
+    &::after {
+      background-color: rgba(#000, 0.6);
+    }
+    &:hover {
+      &::after {
+        background-color: rgba(#000, 0.2);
+      }
+    }
+    &:active {
+      &::after {
+        background-color: rgba(#000, 0.2);
+      }
     }
   }
 }
@@ -301,9 +318,137 @@ html.mm-opened {
 }
 
 .header-contacts {
+  width: 100%;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
+  border-top: rgba(#fff, 0.15) 1px solid;
+  padding: 12.5px 0;
+  background-color: rgba(#151515, 0.15);
+  .fa {
+    margin-right: 5px;
+    color: #555;
+  }
+  .phone-h {
+    font-family: firasans, sans-serif;
+    text-align: center;
+  }
 }
+$colors: $blue, $red, $accent;
 
+// for - цикл
+// $i - переменная которая меняется от 1 до того значения которое стоит после through
+// lenghts - длина
+// $colors - список
+
+@for $i from 1 through length($colors) {
+  .carousel-services .owl-item:nth-child(#{length($colors)}n + #{$i}) {
+    background-color: nth($colors, $i);
+  }
+}
+.carousel-services {
+  background-color: $dark;
+  &-item {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    position: relative;
+    display: flex;
+    flex-direction: column-reverse;
+    &:hover {
+      .carousel-services-image {
+        opacity: 1;
+      }
+    }
+    .carousel-logo {
+      text-align: center;
+      img {
+        width: 100px;
+        height: auto;
+        display: inline-block;
+      }
+    }
+  }
+  .owl-item {
+    &:nth-child(2n + 2) {
+      .carousel-services-item {
+        flex-direction: column;
+      }
+    }
+  }
+  &-image {
+    background-size: cover;
+    background-position: center;
+    opacity: 0.7;
+    transition: opacity 0.5s ease;
+  }
+  &-content {
+    // display: flex;
+    position: relative;
+    padding: 60px 10%;
+  }
+  &-composition {
+    margin: auto;
+    text-align: center;
+    width: 100%;
+    .h3 {
+      font-weight: 800;
+      font-size: 28px;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      span {
+        font-weight: normal;
+        font-size: 18px;
+        font-weight: 300;
+        display: block;
+      }
+    }
+  }
+  &-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    margin-bottom: 25px;
+    li {
+      padding: 9px;
+      border-bottom: 1px solid rgba(#000, 0.12);
+      &:last-child {
+        border-bottom: none;
+      }
+      strong {
+        font-family: firasans, sans-serif;
+        color: #4a4a4a;
+      }
+      .fa {
+        font-size: 14px;
+      }
+    }
+  }
+  .owl-nav {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    > div {
+      width: 64px;
+      height: 64px;
+      background-color: #fff;
+      color: $dark;
+      position: absolute;
+      text-align: center;
+      line-height: 64px;
+      font-size: 26px;
+      &.owl-prev {
+        left: 0;
+      }
+      &.owl-next {
+        right: 0;
+      }
+    }
+  }
+}
+.owl-carousel {
+  .owl-item {
+    backface-visibility: inherit;
+  }
+}
 @import "./_media"; //всегда в конце!
