--- a/app/styles/_libs.scss
+++ b/app/styles/_libs.scss
@@ -5,3 +5,5 @@
 @import "../libs/css-hamburgers/hamburgers.css";
 @import "../libs/owl.carousel/assets/owl.carousel.min.css";
 @import "../libs/owl.carousel/assets/owl.theme.default.min.css";
+@import "../libs/fotorama/fotorama.css";
+@import "../libs/selectize/css/selectize.css";
