--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,6 +52,70 @@ body {
     }
   }
 }
+
+@mixin opacity($opacity) {
+  opacity: $opacity/100;
+  filter: alpha(opacity=$opacity);
+}
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  background-color: $dark;
+  .pulse {
+    position: relative;
+    left: 50%;
+    top: 50vh;
+    margin-left: -40px;
+    margin-top: -40px;
+    &::before,
+    &::after {
+      content: "";
+      border: 5px solid #323232;
+      width: 80px;
+      height: 80px;
+      border-radius: 500px;
+      position: absolute;
+    }
+    &::before {
+      animation: pulse-outer 0.8s ease-in infinite;
+    }
+    &:after {
+      animation: pulse-inner 0.8s linear infinite;
+    }
+  }
+}
+@keyframes pulse-outer {
+  0% {
+    @include opacity(100);
+  }
+  50% {
+    @include opacity(50);
+  }
+  100% {
+    @include opacity(0);
+  }
+}
+@keyframes pulse-inner {
+  0% {
+    @include opacity(0);
+    transform: scale(0);
+  }
+
+  100% {
+    @include opacity(100);
+    transform: scale(1);
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
 .h1,
 .h2,
 .h3,
@@ -132,7 +196,22 @@ header {
   background-position: center;
 }
 section {
-  color: #fff;
+  background-color: #fff;
+  &.inverse {
+    color: #fff;
+    background-color: $dark;
+    &.s-call {
+      background-color: #fff;
+    }
+  }
+  .h2 {
+    font-size: 30px;
+    font-weight: 800;
+    color: $accent;
+    span {
+      color: #fff;
+    }
+  }
 }
 
 .hamburger {
@@ -451,4 +530,512 @@ $colors: $blue, $red, $accent;
     backface-visibility: inherit;
   }
 }
+
+.s {
+  &-king,
+  &-review,
+  &-partners {
+    padding: 5% 0;
+  }
+  &-king {
+    p {
+      margin: 30px 0;
+      font-size: 18px;
+    }
+  }
+  &-call {
+    background-image: url(../img/madama.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 10%;
+    &::before {
+      content: "";
+      width: 50%;
+      right: 0;
+      height: 100%;
+      position: absolute;
+      background-color: rgba($accent, 0.92);
+    }
+  }
+  &-partners.section-overlay {
+    &::before {
+      background-color: #fff;
+    }
+    .h2 {
+      margin-top: 10px;
+      span {
+        color: $accent;
+      }
+    }
+  }
+}
+.section-overlay {
+  background-image: url(../img/photos/foto-16.jpg);
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $over;
+    opacity: 0.92;
+  }
+}
+.fotorama {
+  background-color: rgba($dark, 0.4);
+  &__nav {
+    &-wrap {
+      position: absolute;
+      bottom: 15px;
+      padding: 0 30px;
+      width: 100%;
+    }
+  }
+  &__thumb {
+    border: 4px #fff solid;
+    transition: border-color 0.5s ease;
+    &-border {
+      border-color: #3d3c3c;
+    }
+  }
+  &__nav:after,
+  &_stage:after,
+  &__nav:before,
+  &__stage:before {
+    display: none;
+  }
+  &__arr- {
+    &-next,
+    &-prev {
+      &::before {
+        font-family: FontAwesome;
+        font-size: 32px;
+      }
+    }
+    &-next {
+      &::before {
+        content: "\f105";
+      }
+    }
+    &-prev {
+      left: 25px;
+      &::before {
+        content: "\f104";
+      }
+    }
+  }
+  &__active {
+    .fotorama__thumb {
+      border-color: #3d3c3c;
+    }
+  }
+}
+
+input,
+textarea,
+select,
+.selectize-control .selectize-input,
+.selectize-control.single .selectize-input.input-active {
+  background-color: transparent;
+  border: rgba(#000, 0.1) 1px solid;
+  border-bottom: rgba(#000, 0.1) 2px solid;
+  border-radius: 2px;
+  padding: 8px 22px;
+  outline: none;
+  display: inline-block;
+  font-size: 16px;
+  color: #333;
+}
+select {
+  padding: 10px 22px;
+}
+
+.selectize-control .selectize-input {
+  box-shadow: none;
+  overflow: inherit;
+  line-height: inherit;
+  text-align: left;
+  input {
+    font-size: 16px;
+  }
+  &.dropdown-active::before {
+    background-color: transparent;
+  }
+}
+
+.selectize-control.single {
+  .selectize-input,
+  &.dropdown-active {
+    &::after {
+      border: none;
+      content: "\f107";
+      font-family: FontAwesome;
+      position: absolute;
+      right: 30px;
+      top: 12px;
+    }
+    &.dropdown-active::after {
+      content: "\f106";
+    }
+  }
+  .selectize-dropdown {
+    font-size: 15px;
+    border: none;
+    border-radius: 0;
+    text-align: left;
+    &-content {
+      .option {
+        padding: 10px 22px;
+        &.active {
+          background-color: lighten($color: $accent, $amount: 15);
+        }
+      }
+    }
+  }
+}
+
+.success {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-transform: uppercase;
+  font-weight: bold;
+  z-index: 10;
+  span {
+    margin: auto;
+  }
+  & ~ * {
+    transition: all 0.5s ease;
+  }
+  &.active {
+    & ~ * {
+      opacity: 0.5;
+      filter: blur(10px);
+    }
+  }
+}
+
+.callback {
+  padding: 25% 0;
+  position: relative;
+  &-logo {
+    img {
+      width: 100px;
+      height: auto;
+    }
+  }
+  .formhead {
+    margin: 0;
+    font-size: 30px;
+    color: #fff;
+  }
+  p {
+    margin-top: 0;
+  }
+  input,
+  textarea,
+  select,
+  .selectize-control .selectize-input,
+  .selectize-control.single .selectize-input.input-active {
+    color: #fff;
+    width: 100%;
+    margin-top: 17px;
+    &::-webkit-input-placeholder {
+      color: #fff;
+      opacity: 1;
+    }
+    &::-moz-input-placeholder {
+      color: #fff;
+      opacity: 1;
+    }
+    &::-ms-input-placeholder {
+      color: #fff;
+      opacity: 1;
+    }
+    option {
+      color: #333333;
+    }
+  }
+  .button {
+    margin-top: 40px;
+  }
+}
+
+.reviews {
+  text-align: center;
+  .owl-dots {
+    width: 100%;
+    text-align: center;
+    margin-top: 60px;
+    .owl-dot {
+      width: 8px;
+      height: 8px;
+      background-color: #fff;
+      border-radius: 10em;
+      display: inline-block;
+      margin: 5px;
+      transition: background-color 0.5s ease, transform 0.5s ease;
+      &.active {
+        background-color: $accent;
+        transform: scale(1.3);
+      }
+    }
+  }
+}
+.s-review {
+  background-image: url(/img/bg-2.jpg);
+  .owl-carousel .owl-nav.disabled {
+    display: none;
+  }
+}
+.s-partners {
+  background-image: url(/img/bg-3.jpg);
+}
+
+.review {
+  margin-top: 20px;
+
+  &-header {
+    font-family: "Times New Roman", serif;
+    font-style: italic;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  &-date {
+    font-family: "Times New Roman", serif;
+    font-style: italic;
+    font-size: 15px;
+    color: #888;
+  }
+  &-stars {
+    margin: 18px 0 30px;
+    font-size: 14px;
+    color: $accent;
+    .fa {
+      margin: 0 2.5px;
+    }
+  }
+  &-text {
+    color: #95989a;
+  }
+}
+
+.quotes {
+  position: absolute;
+  width: 100%;
+  &::before,
+  &::after {
+    content: ",,";
+    position: absolute;
+    top: 182px;
+    font-size: 56px;
+    color: $accent;
+    font-family: "Times New Roman", serif;
+    font-weight: bold;
+    line-height: 0;
+    transform: rotate(180deg);
+    display: block;
+  }
+  &::before {
+    top: 220px;
+    left: -60px;
+  }
+  &::after {
+    right: -60px;
+    transform: rotate(0);
+  }
+}
+.partners {
+  .partner {
+    height: 100%;
+    display: flex;
+    margin: auto;
+  }
+  .owl-stage {
+    display: flex;
+  }
+  .owl-item {
+    margin-top: 30px;
+    img {
+      max-width: 100%;
+      width: auto;
+      display: inline-block;
+      margin: auto;
+    }
+  }
+  .owl-nav {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+    > div {
+      position: absolute;
+      top: 50px;
+      color: #999;
+      font-size: 30px;
+      transition: opacity 0.5s ease;
+      padding: 0 10px;
+      &:hover {
+        opacity: 0.6;
+      }
+      &.owl-prev {
+        left: -60px;
+      }
+      &.owl-next {
+        right: -60px;
+      }
+    }
+  }
+}
+.owl-carousel .owl-nav.disabled {
+  display: block;
+}
+
+.main-footer {
+  background-color: #242424;
+  padding: 3% 0;
+  color: #fff;
+  font-size: 14px;
+}
+.footer-column {
+  margin: 15px 0;
+}
+
+.logo-footer {
+  width: 125px;
+  height: auto;
+  + p {
+    color: #666;
+    padding: 0;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    font-size: 14px;
+  }
+}
+
+.social-footer {
+  margin-top: 38px;
+  .soc {
+    li {
+      display: inline-block;
+      margin: 3px;
+      a {
+        color: #ababab;
+        margin-bottom: 0;
+        transition: color 0.5s ease, background-color 0.5s ease;
+        &:hover {
+          color: rgba(#fff, 0.8);
+        }
+      }
+    }
+  }
+}
+.footer-menu {
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    li.active {
+      a {
+        color: $accent;
+        &::before {
+          color: $accent;
+        }
+      }
+    }
+    a {
+      color: #979797;
+      transition: color 0.5s ease;
+      display: inline-block;
+      padding: 3.5px 0;
+      text-decoration: underline;
+      padding-left: 20px;
+      position: relative;
+      &:hover,
+      &:focus {
+        color: $accent;
+        &::before {
+          color: $accent;
+        }
+      }
+      &::before {
+        position: absolute;
+        font-family: FontAwesome;
+        content: "\f219";
+        left: 0;
+        font-size: 12px;
+        color: #fff;
+        transition: color 0.5s ease;
+        top: 6px;
+        margin-right: 12px;
+      }
+    }
+  }
+}
+
+.footer-addr {
+  position: relative;
+  font-size: 15px;
+  padding-left: 24px;
+  margin: 0 0 20px;
+  .fa {
+    position: absolute;
+    left: 0;
+    top: 5px;
+    font-size: 18px;
+    color: #555555;
+  }
+  .footer-phone {
+    font-size: 26px;
+    font-family: firasans, sans-serif;
+    padding-top: 10px;
+    display: block;
+    white-space: nowrap;
+    .fa {
+      top: 22px;
+      font-size: 22px;
+      left: 3px;
+    }
+  }
+}
+
+.map {
+  max-height: 200px;
+  opacity: 0.7;
+  transition: opacity 0.5s ease;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.top {
+  position: fixed;
+  bottom: 25px;
+  right: -100px;
+  background-color: #e0e0e0;
+  z-index: 12;
+  border-radius: 10em;
+  color: #666666;
+  font-size: 26px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  opacity: 0.5;
+  &:hover {
+    color: #fff;
+    background-color: $accent;
+    opacity: 1;
+  }
+  &.active {
+    right: 25px;
+  }
+}
+
 @import "./_media"; //всегда в конце!
